# rust-raytracing

./: Cargo.toml  README.md
lib-raytracing/: Cargo.toml
lib-raytracing/src/: hittable.rs  lib.rs  material.rs  ray.rs  util.rs  vec3.rs
lib-raytracing/src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
lib-raytracing/src/objects/: sphere.rs  triangle.rs
lib-raytracing/src/scenes/: loader.rs  mod.rs  mtlloader.rs  objloader.rs
src/: camera.rs  hittable.rs  main.rs  material.rs  ray.rs  util.rs  vec3.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: sphere.rs  triangle.rs
winit-example/: Cargo.toml
winit-example/src/: main.rs
