[package]
name = "winit-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
lib-raytracing = { version = "0.1.0", path = "../lib-raytracing" }
log = "0.4.17"
pixels = "0.12.0"
rayon = "1.7.0"
winit = "0.28.3"
winit_input_helper = "0.14.1"
